# nhlposts

./: .gitignore  pyproject.toml  requirements.txt
nhlposts/: __init__.py  cli.py
nhlposts/analysis/: aggregator.py  filters.py  metrics.py
nhlposts/api/: client.py  endpoints.py
nhlposts/cache/: db.py  store.py
nhlposts/display/: charts.py  export.py  tables.py
nhlposts/gui/: __init__.py  app.py
nhlposts/ingestion/: games.py  players.py  season.py
nhlposts/models/: game.py
