[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhlposts"
version = "0.1.0"
description = "Analyze NHL shots that hit the post or crossbar using play-by-play data"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "tenacity>=8.2",
    "rich>=13.7",
    "pandas>=2.2",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
charts = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
gui = [
    "streamlit>=1.35",
    "plotly>=5.20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.scripts]
nhlposts = "nhlposts.cli:main"
nhlposts-gui = "nhlposts.gui:launch"

[tool.setuptools.packages.find]
where = ["."]
include = ["nhlposts*"]
